--- a/main.ipynb
+++ b/main.ipynb
@@ -12,6 +12,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def PNSubGraph(visited, graph, node):\n",
+    "  visited.append(node)\n",
+    "  queue.append(node)\n",
+    "  \n",
+    "  PN[node] = [element *-1 for element in data[node][0:threshPN]]\n",
+    "  Level[node] = 0 \n",
+    "  while queue:\n",
+    "    s = queue.pop(0) \n",
+    "    print (s, end = \" \") \n",
+    "    \n",
+    "    if s not in list(data.keys()) : \n",
+    "        break\n",
+    "    len_pn = len(PN[s])\n",
+    "    if  len_pn < 2 : \n",
+    "       for i in data[s][0:threshPN-len_pn] :\n",
+    "            PN[s].append(-1*i)\n",
+    "    for neighbour in data[s]:\n",
+    "       if neighbour not in visited:\n",
+    "        visited.append(neighbour)\n",
+    "        queue.append(neighbour)\n",
+    "        \n",
+    "        #Distance_Path_To_Root = Level[s] + Distance[s][neighbour]\n",
+    "        #Have_Parent = CheckHaveParent(PN[neighbour])\n",
+    "        # if  Have_Parent : \n",
+    "        #     Level[neighbour] = Distance_Path_To_Root\n",
+    "        # else :\n",
+    "        #     Level[neighbour] = -Distance_Path_To_Root \n",
+    "\n",
+    "       if len(PN[neighbour]) < threshPN : \n",
+    "           PN[neighbour].append(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -480,50 +518,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (Temp/ipykernel_18492/735165411.py, line 13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Oaki\\AppData\\Local\\Temp/ipykernel_18492/735165411.py\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21],\n",
+       " [-21, -21]]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "thresh_PN = 6\n",
+    "thresh_PN = 2\n",
     "C_id = [None] * N_vertex\n",
-    "PN = []\n",
+    "PN = [[-N_vertex-1]*thresh_PN for _ in range(N_vertex)]\n",
     "size = [0]*N_vertex\n",
-    "Q = []  \n",
+    "Q = [-1]  \n",
     "for i in range(N_vertex):\n",
     "    start = 0\n",
     "    end = 1\n",
-    "    Q.insert(0, V[i])\n",
+    "    Q.insert(0, V[i][0])\n",
     "    level[i] = 0\n",
     "    C_id[i] = V[i]\n",
     "    while start!=end:\n",
     "        stop = end\n",
     "        j = start\n",
     "        while j <= end:\n",
-    "            for d in E[Q[j][0]]:\n",
+    "            for d in E[Q[j]]:\n",
     "                if level[d]==-1:\n",
-    "                    Q[end] = d\n",
+    "                    Q.append(d)\n",
     "                    end+=1\n",
-    "                    level[d]=level[Q[j][0]]+1\n",
-    "                    C_id[d]=C_id[Q[j][0]]\n",
+    "                    level[d]=level[Q[j]]+1\n",
+    "                    C_id[d]=C_id[Q[j]]\n",
     "                if count[d] < thresh_PN:\n",
-    "                    if level[Q[j][0]] < level[d]:\n",
-    "                        PN[[d][count[d]]] = Q[j][0]\n",
+    "                    if level[Q[j]] < level[d]:\n",
+    "                        PN[d][count[d]] = Q[j]\n",
     "                        count[d]+=1\n",
-    "                    elif level[Q[j][0]] == level[d]:\n",
-    "                        PN[[[d][count[d]]]] = -Q[j][0]\n",
+    "                    elif level[Q[j]] == level[d]:\n",
+    "                        PN[d][count[d]] = -Q[j]\n",
     "                        count[d]+=1\n",
+    "            j+=1\n",
     "        start=stop\n",
     "    size[i]=end\n",
-    "                        \n"
+    "                        \n",
+    "PN"
    ]
   }
  ],
