--- a/Network_Analysis copy.ipynb
+++ b/Network_Analysis copy.ipynb
@@ -312,6 +312,16 @@
    "source": [
     "PN"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "G = nx.Graph()\n",
+    "G.add_edges_from([(1,2),(1,3)])\n"
+   ]
   }
  ],
  "metadata": {
